# switch-pi-bot

./: .gitignore  .gitmodules  20-run-chroot.sh  CHANGELOG  README.md  changelog.md  changelog.txt  chroot.sh  config  docker-compose.yml  firstboot.sh  install.sh  nginx  requirements.txt
.github/workflows/: backend.yml  buildimage.yml  codeql.yml  frontend.yml  program-runner.yml  webapp.yml
HID/: USB-SwitchPro.py
RP2040/: .gitignore  CMakeLists.txt  hid.py  hid_report_desc.txt  main.h  main.py  pico_sdk_import.cmake
RP2040/hid/: main.py
Serial/: SerialOutput.py
USB Gadget/root/boot/firmware/: config.txt
USB Gadget/root/etc/: modules  rc.local
database/: database.Dockerfile  docker-compose.yml  init-mongo.js
database/schema/: localSettings.json  programs.json
docker/: Dockerfile  build.Dockerfile  chroot.sh  install.sh
pi-gen/: 00-run-chroot.sh  00-run.sh  10-packages  10-run-chroot.sh  20-run-chroot.sh
program-runner/: CMakeLists.txt
program-runner/docker/: program-runner.Dockerfile
program-runner/src/: ProgramRegistry.cpp  ProgramRegistry.h  ProgramWorker.cpp  ProgramWorker.h  main.cpp
program-runner/src/Capture/: Capture.cpp  Capture.h  ImageRecognition.cpp  ImageRecognition.h  TextRecognition.cpp  TextRecognition.h
program-runner/src/Database/: Database.cpp  Database.h  Programs.cpp  Programs.h
program-runner/src/HIDGController/: Gamepad.cpp  Gamepad.h  HIDGController.cpp  HIDGController.h
program-runner/src/Programs/: Test.cpp  Test.h
program-runner/src/Programs/Tests/: Test.cpp  Test.h
services/: firstboot.service  firstboot.sh  npm-clean-cache.service  npm-delete-build.service  npmbuild.service  npmclean.service  pibot-backend.service  pibot-frontend.service  usbgadget.service  usbgadget.sh  ustreamer.service
src/data/: programs.json  settings.json  status.json
src/switch-control/: app.py  capture.py  capture_analyser.py  captureanalysis.py  capturecard.py  gamepad.py  install.sh  programrunner.py  requirements.txt  status.json  videocapture.py
src/switch-control/Test Scripts/: lstick.sh
src/switch-control/programs/BDSP/: egghatcher.py
src/switch-control/programs/templates/: basicprogram.py  capturetext.py  capturevideo.py  testdpad.py  testlstick.py
src/switch-control/test/: testcapturecards.py
src/usb-gadget/: gamepad.py  install.sh  usbgadget.sh
src/usb-gadget/Test Scripts/: buttons.sh  dpad.sh
src/video/: capturecard.py
src/webui/: .eslintrc.json  .gitignore  package-lock.json  package.json  tsconfig.json
src/webui/app/: globals.css  json.ts  layout.tsx  page.tsx  theme.ts
src/webui/app/api/programs/get-program-status/: route.ts
src/webui/app/api/programs/get-programs/: route.ts
src/webui/app/api/programs/save-settings/: route.ts
src/webui/app/api/programs/start-program/: route.ts
src/webui/app/api/settings/: route.ts
src/webui/app/components/: StatusDisplay.tsx
src/webui/app/fullscreen/: page.tsx
src/webui/app/programs/: JSONInterface.ts
src/webui/app/settings/: page.tsx
test/: capturejpeg.py  connect.sh  convertjpeg.py
tests/: docker-compose.yml  test_output_ws.py  test_status_ws.py
usb-gadget/: .gitignore  usbgadget.sh
usb-gadget/Test Scripts/: rstick.sh
web/: .gitignore
webui/: .gitignore  index.js  package-lock.json  package.json
webui/docker/: webui.Dockerfile
webui/public/: index.html
